# macos-screen-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/macos_screen_mcp/: __init__.py  __main__.py  keyboard_manager.py  server.py  window_manager.py
