[project]
name = "macos-screen-mcp"
version = "1.0.0"
description = "MCP server for capturing window screenshots and controlling macOS windows"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "pyobjc-framework-Quartz>=9.2",
    "pyobjc-framework-Cocoa>=9.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "pydantic>=2.4.2",
    "numpy>=1.24.0",
    "python-jose>=3.3.0",
    "mcp>=1.6.0"
]

[project.scripts]
macos-screen-mcp = "macos_screen_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 